<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ran.fingerfood.Activities.ProfileActivity"

    android:orientation="vertical"
    android:weightSum="1">


    <RelativeLayout
        android:id="@+id/upper_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.6"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_blue"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/user"/>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cardBar"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:visibility="visible"
            app:cardCornerRadius="10dp"
            app:cardElevation="11dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurants_txt"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/numberOfRest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/blueTheme"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dishes_txt"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/numberOfDishes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/blueTheme"
                        />


                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>



    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/gallery"
        android:background="@color/graylight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_weight="0.4"
        >

    </android.support.v7.widget.RecyclerView>


</LinearLayout>

