<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_beige"
    tools:context="com.example.ran.fingerfood.Activities.PreferencesActivity">

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="30dp"
        android:columnCount="2"
        android:rowCount="1"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="9dp"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/delivery_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="6dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/delivery_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/delivery"
                    android:layout_gravity="center_horizontal"

                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:id="@+id/kosher_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="6dp"
                android:orientation="vertical">



                <ImageView
                    android:id="@+id/kosher_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/kosher"
                    android:layout_gravity="center_horizontal"
                    />


            </LinearLayout>

        </android.support.v7.widget.CardView>



    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="1"
        android:rowCount="2"
        android:layout_weight="5"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="9dp">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/seekBarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/seekBar"
                    android:layout_centerHorizontal="true"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/distance_txt" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:max="60"
                    android:progress="15" />



            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/price_text_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_centerInParent="true"
                    android:text="@string/price_range_txt"
                    android:textSize="20dp" />

                <NumberPicker
                    android:id="@+id/price_picker_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/price_text_id"
                    android:layout_centerInParent="true"
                    android:descendantFocusability="blocksDescendants"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>



    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_gravity="end"
        android:elevation="4dp"
        >


        <Button
            android:id="@+id/cancel_changes_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_txt"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_weight="0.5"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@drawable/border_light"
           />



        <Button
            android:id="@+id/apply_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_txt"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:background="@drawable/border_light"
           />



    </LinearLayout>






</LinearLayout>
